fix overflow text bug account

--- a/src/components/AccountItem/AccountItem.module.scss
+++ b/src/components/AccountItem/AccountItem.module.scss
@@ -31,6 +31,10 @@
     font-size: 1.4rem;
     color: rgb(32, 213, 236);
     margin-left: 6px;
+    // height: 16px;
+    transform: translateY(-5px);
+    display: inline-block;
+    // align-items: flex-start;
 }
 
 .nickname {
