--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -5,7 +5,7 @@
 }
 .container {
     display: grid;
-    grid-template-columns: 3fr 8fr;
+    grid-template-columns: 2fr 9fr;
     max-width: 100%;
     grid-template-rows: 1fr;
     width: var(--default-layout-width);
